@@ -1,0 +1,281 @@
+/* XPM */
+static char *find-next_xpm[] = {
+/* width height num_colors chars_per_pixel */
+"    18    18      256            2",
+/* colors */
+"`` c #ffffff",
+"`. c #adb5d6",
+"`# c #8c9cc6",
+"`a c #7b9cce",
+"`b c #94a5ce",
+"`c c #94add6",
+"`d c #bddeef",
+"`e c #c6f7ff",
+"`f c #add6e7",
+"`g c #f7f7ff",
+"`h c #a5deff",
+"`i c #bdefff",
+"`j c #d6efff",
+"`k c #d6ffff",
+"`l c #e7ffff",
+"`m c #f7ffff",
+"`n c #efffff",
+"`o c #949cbd",
+"`p c #e7c68c",
+"`q c #c6c6b5",
+"`r c #848cbd",
+"`s c #e7bd7b",
+"`t c #ffbd4a",
+"`u c #d68c52",
+"`v c #adad94",
+"`w c #000000",
+"`x c #ce7b4a",
+"`y c #a57b84",
+"`z c #adadbd",
+"`A c #008000",
+"`B c #a59cbd",
+"`C c #ada584",
+"`D c #adada5",
+"`E c #848484",
+"`F c #000000",
+"`G c #000000",
+"`H c #000000",
+"`I c #000000",
+"`J c #000000",
+"`K c #000000",
+"`L c #000000",
+"`M c #000000",
+"`N c #000000",
+"`O c #000000",
+"`P c #000000",
+"`Q c #000000",
+"`R c #000000",
+"`S c #000000",
+"`T c #000000",
+"`U c #000000",
+"`V c #000000",
+"`W c #000000",
+"`X c #000000",
+"`Y c #000000",
+"`Z c #000000",
+"`0 c #000000",
+"`1 c #000000",
+"`2 c #000000",
+"`3 c #000000",
+"`4 c #000000",
+"`5 c #000000",
+"`6 c #000000",
+"`7 c #000000",
+"`8 c #000000",
+".` c #000000",
+".. c #000000",
+".# c #000000",
+".a c #000000",
+".b c #000000",
+".c c #000000",
+".d c #000000",
+".e c #000000",
+".f c #000000",
+".g c #000000",
+".h c #000000",
+".i c #000000",
+".j c #000000",
+".k c #000000",
+".l c #000000",
+".m c #000000",
+".n c #000000",
+".o c #000000",
+".p c #000000",
+".q c #000000",
+".r c #000000",
+".s c #000000",
+".t c #000000",
+".u c #000000",
+".v c #000000",
+".w c #000000",
+".x c #000000",
+".y c #000000",
+".z c #000000",
+".A c #000000",
+".B c #000000",
+".C c #000000",
+".D c #000000",
+".E c #000000",
+".F c #000000",
+".G c #000000",
+".H c #000000",
+".I c #000000",
+".J c #000000",
+".K c #000000",
+".L c #000000",
+".M c #000000",
+".N c #000000",
+".O c #000000",
+".P c #000000",
+".Q c #000000",
+".R c #000000",
+".S c #000000",
+".T c #000000",
+".U c #000000",
+".V c #000000",
+".W c #000000",
+".X c #000000",
+".Y c #000000",
+".Z c #000000",
+".0 c #000000",
+".1 c #000000",
+".2 c #000000",
+".3 c #000000",
+".4 c #000000",
+".5 c #000000",
+".6 c #000000",
+".7 c #000000",
+".8 c #000000",
+"#` c #000000",
+"#. c #000000",
+"## c #000000",
+"#a c #000000",
+"#b c #000000",
+"#c c #000000",
+"#d c #000000",
+"#e c #000000",
+"#f c #000000",
+"#g c #000000",
+"#h c #000000",
+"#i c #000000",
+"#j c #000000",
+"#k c #000000",
+"#l c #000000",
+"#m c #000000",
+"#n c #000000",
+"#o c #000000",
+"#p c #000000",
+"#q c #000000",
+"#r c #000000",
+"#s c #000000",
+"#t c #000000",
+"#u c #000000",
+"#v c #000000",
+"#w c #000000",
+"#x c #000000",
+"#y c #000000",
+"#z c #000000",
+"#A c #000000",
+"#B c #000000",
+"#C c #000000",
+"#D c #000000",
+"#E c #000000",
+"#F c #000000",
+"#G c #000000",
+"#H c #000000",
+"#I c #000000",
+"#J c #000000",
+"#K c #000000",
+"#L c #000000",
+"#M c #000000",
+"#N c #000000",
+"#O c #000000",
+"#P c #000000",
+"#Q c #000000",
+"#R c #000000",
+"#S c #000000",
+"#T c #000000",
+"#U c #000000",
+"#V c #000000",
+"#W c #000000",
+"#X c #000000",
+"#Y c #000000",
+"#Z c #000000",
+"#0 c #000000",
+"#1 c #000000",
+"#2 c #000000",
+"#3 c #000000",
+"#4 c #000000",
+"#5 c #000000",
+"#6 c #000000",
+"#7 c #000000",
+"#8 c #000000",
+"a` c #000000",
+"a. c #000000",
+"a# c #000000",
+"aa c #000000",
+"ab c #000000",
+"ac c #000000",
+"ad c #000000",
+"ae c #000000",
+"af c #000000",
+"ag c #000000",
+"ah c #000000",
+"ai c #000000",
+"aj c #000000",
+"ak c #000000",
+"al c #000000",
+"am c #000000",
+"an c #000000",
+"ao c #000000",
+"ap c #000000",
+"aq c #000000",
+"ar c #000000",
+"as c #000000",
+"at c #000000",
+"au c #000000",
+"av c #000000",
+"aw c #000000",
+"ax c #000000",
+"ay c #000000",
+"az c #000000",
+"aA c #000000",
+"aB c #000000",
+"aC c #000000",
+"aD c #000000",
+"aE c #000000",
+"aF c #000000",
+"aG c #000000",
+"aH c #000000",
+"aI c #000000",
+"aJ c #000000",
+"aK c #000000",
+"aL c #000000",
+"aM c #000000",
+"aN c #000000",
+"aO c #000000",
+"aP c #000000",
+"aQ c #000000",
+"aR c #000000",
+"aS c #000000",
+"aT c #000000",
+"aU c #000000",
+"aV c #000000",
+"aW c #000000",
+"aX c #000000",
+"aY c #000000",
+"aZ c #000000",
+"a0 c #000000",
+"a1 c #000000",
+"a2 c #000000",
+"a3 c #000000",
+"a4 c #000000",
+"a5 c #000000",
+"a6 c #000000",
+"a7 c #000000",
+"a8 c #000000",
+/* pixels */
+"````````````````````````````````````",
+"````````````````````````````````````",
+"`````````````````.`#`a`a`b`.````````",
+"```````````````b`c`d`e`e`f`c`#``````",
+"`````````````.`c```g`e`h`i`e`c`b````",
+"`````````````b`d`j`i`i`e`e`e`f`a````",
+"`````````````a`e`i`e`k`k`k`k`e`a````",
+"`````````````a`e`h`i`k`l`l`l`j`a````",
+"`````````````b`f`i`e`k`l`m`m`d`#````",
+"`````````````.`c`e`e`k`n`m`m`.`o````",
+"```````````p`q`r`c`f`e`j`d`.`b``````",
+"`````````s`t`u`v`b`a`a`a`w`w````````",
+"```````s`t`x`y`z`````````w`A`w``````",
+"`````s`t`x`y`w`w`w`w`w`w`w`A`A`w````",
+"```p`t`x`y`B`w`A`A`A`A`A`A`A`A`A`w``",
+"```C`x`y`B```w`w`w`w`w`w`w`A`A`w````",
+"```D`E`B`````````````````w`A`w``````",
+"`````````````````````````w`w````````"
+};
